[profile.release]
lto = true
opt-level = "z"        # Optimize for size.
codegen-units = 1      # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"        # Abort on panic, as unwinding code does require extra binary size
rpath = true
debug = "line-tables-only" # Emit line tables so dsymutil can build dSYMs with
                           # matching UUIDs (required for Xcode archive validation
                           # of the Apple XCFramework) and stack traces resolve
                           # to file + line. Per-package overrides below strip
                           # third-party dependencies down to no debug info.

# Debug-info scoping for release builds.
#
# We ship Apple bindings through `breez_sdk_sparkFFI.xcframework`, which embeds
# `.dSYM` bundles so Xcode archive validation passes. Full DWARF over our whole
# dependency graph (rustls, tokio, ldk-node, secp256k1, bitcoin, ...) inflates
# those dSYMs by an order of magnitude without meaningfully improving crash
# reports for the code that actually matters.
#
# Strategy: emit `line-tables-only` DWARF for every first-party crate under
# `crates/`, and no debug info at all for third-party dependencies. First-party
# stack frames still resolve to file + line in crash reports; third-party frames
# keep their symbol names from the Mach-O symbol table but lose source lines.
# If a crash repeatedly surfaces inside a specific external crate, we can flip
# that crate back to `line-tables-only` on demand.
[profile.release.package."*"]
debug = false

[profile.release.package.breez-sdk-bindings]
debug = "line-tables-only"

[profile.release.package.breez-sdk-spark]
debug = "line-tables-only"

[profile.release.package.breez-sdk-common]
debug = "line-tables-only"

[profile.release.package.breez-sdk-spark-wasm]
debug = "line-tables-only"

[profile.release.package.breez-sdk-itest]
debug = "line-tables-only"

[profile.release.package.breez-sdk-bench]
debug = "line-tables-only"

[profile.release.package.spark]
debug = "line-tables-only"

[profile.release.package.spark-wallet]
debug = "line-tables-only"

[profile.release.package.spark-mysql]
debug = "line-tables-only"

[profile.release.package.spark-postgres]
debug = "line-tables-only"

[profile.release.package.spark-itest]
debug = "line-tables-only"

[profile.release.package.spark-cli]
debug = "line-tables-only"

[profile.release.package.lnurl-models]
debug = "line-tables-only"

[profile.release.package.flashnet]
debug = "line-tables-only"

[profile.release.package.platform-utils]
debug = "line-tables-only"

[profile.release.package.utils]
debug = "line-tables-only"

[profile.release.package.macros]
debug = "line-tables-only"

[profile.release.package.macro_test]
debug = "line-tables-only"

[profile.release.package.cli]
debug = "line-tables-only"

[profile.release.package.xtask]
debug = "line-tables-only"

[profile.release.package.nip65-publisher]
debug = "line-tables-only"

[workspace]
resolver = "2"
members = [
  "crates/breez-sdk/bindings",
  "crates/breez-sdk/cli",
  "crates/breez-sdk/common",
  "crates/breez-sdk/core",
  "crates/breez-sdk/lnurl-models",
  "crates/breez-sdk/breez-itest",
  "crates/breez-sdk/breez-bench",
  "crates/breez-sdk/wasm",
  "crates/flashnet",
  "crates/macros",
  "crates/macro_test",
  "crates/platform-utils",
  "crates/utils",
  "crates/spark",
  "crates/spark-itest",
  "crates/spark-mysql",
  "crates/spark-postgres",
  "crates/spark-storage",
  "crates/spark-wallet",
  "crates/xtask",
  "crates/internal",
  "crates/nip65-publisher",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"
arithmetic_side_effects = "warn"

[workspace.dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bech32 = "0.11.0"
bip39 = "2.2.0"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitflags = "2.10.0"
breez-sdk-common = { path = "crates/breez-sdk/common", default-features = false }
breez-sdk-spark = { path = "crates/breez-sdk/core" }
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.10.1"
cargo_metadata = "0.18"
cbc = "0.1.2"
chrono = { version = "0.4.37", features = ["serde"] }
clap = "4.5.40"
dirs = "6.0.0"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
figment = "0.10.19"
flashnet = { path = "crates/flashnet", default-features = false }
# nested-signing branch
frost-core = { git = "https://github.com/lightsparkdev/frost", rev = "9aaf1b6b9fa3c2c3c2c7c70da83061deda1a9180" }
frost-secp256k1-tr = { git = "https://github.com/lightsparkdev/frost", rev = "9aaf1b6b9fa3c2c3c2c7c70da83061deda1a9180" }
futures = { version = "0.3", default-features = false }
glob = "0.3.1"
graphql_client = { version = "0.16.0" }
hex = "0.4.3"
dnssec-prover = { version = "0.6.7", default-features = false }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
js-sys = "0.3.77"
k256 = { version = "0.13.0", features = ["arithmetic"] }
lightning = "0.1.3"
lightning-invoice = "0.33.1"
lnurl-models = { path = "crates/breez-sdk/lnurl-models" }
macros = { path = "crates/macros" }
nostr = { version = "0.43.1", default-features = false, features = ["std"] }
nostr-sdk = { version = "0.43.0", default-features = false }
platform-utils = { path = "crates/platform-utils" }
utils = { path = "crates/utils" }
proc-macro2 = "1.0.97"
prost = "0.13.4"
prost-types = "0.13.4"
quote = "1.0.40"
rand = "0.8"
rcgen = "0.14.5"
secp256k1 = { version = "0.29", features = ["rand"] }
regex-lite = "0.1.6"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "http2", "charset", "system-proxy", "rustls-tls"] }
rstest = "0.26.1"
rstest_reuse = "0.7.0"
# We want to match the rusqlite version used by ldk-node and the rest of the ecosystem
rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }
rusqlite_migration = { version = "1.3.1" }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustyline = "16.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
serde_with = "3.13.0"
shlex = "1.3.0"
spark = { path = "crates/spark", default-features = false }
spark-mysql = { path = "crates/spark-mysql" }
spark-postgres = { path = "crates/spark-postgres" }
spark-storage = { path = "crates/spark-storage" }
spark-wallet = { path = "crates/spark-wallet", default-features = false }
syn = "2.0.105"
test-log = { version = "0.2.18", default-features = false }
testcontainers = "0.24.0"
testcontainers-modules = "0.12.1"
testdir = "0.9.3"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust"] }
deadpool-postgres = "0.14"
deadpool = "0.12"
tokio-test = "0.4.4"
tonic = { version = "0.12.3", default-features = false }
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic-web-wasm-client = "0.6"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tsify-next = {version = "0.5.5", default-features = false}
# Fork of uniffi 0.29.5 that fixes Python Protocol generation for async callback
# methods (plain `def` instead of `async def`). Fixed upstream in 0.30.0.
# Switch back to upstream once we upgrade to uniffi >= 0.30.
uniffi = { git = "https://github.com/breez/uniffi-rs", branch = "fix-python-async-protocol-v0.29.5" }
url = "2.5"
uuid = { version = "1.17.0", features = ["v7", "v5", "v4"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["console", "DomException"] }
webpki-roots = "1.0"
xshell = "0.2"
